# CyberLimb

./: .gitignore  .gitmodules  Dockerfile.local  Dockerfile.remote  README.md  cyberlimb_launch.py  processing_decision_node.py  requirements-dev.txt  requirements.txt  requirements_min.txt
action_output/: action_output_node.py
custom/: mypy.ini
custom/src/action_output/: package.xml  setup.cfg  setup.py
custom/src/action_output/action_output/: action_output_node.py
custom/src/cyberlimb/: CMakeLists.txt  package.xml
custom/src/processing_decision/: setup.cfg  setup.py
custom/src/sensory_input/: package.xml  setup.py
custom/src/sensory_input/config/: params.yml
custom/src/sensory_input/sensory_input/: sensory_input_node.py
processing_decision/: CMakeLists.txt  package.xml
processing_decision/config/: params.yml
processing_decision/launch/: processing_decision_launch.py
scripts/: pick_place.py
sensory_input/: sensory_input_node.py
src/action_output/: CMakeLists.txt  package.xml
src/action_output/action_output/: action_output_node.py
src/action_output/config/: params.yml
src/cyberlimb/: setup.py
src/cyberlimb/launch/: cyberlimb_launch.py
src/processing_decision/: CMakeLists.txt  package.xml
src/processing_decision/processing_decision/: processing_decision_node.py
src/processing_decision/processing_decision/processing_decision/: processing_decision_node.py
src/sensory_input/: CMakeLists.txt  package.xml  setup.cfg
src/sensory_input/resource/: sensory_input
src/sensory_input/sensory_input/: sensory_input_node.py
