<?xml version="1.0"?>
<package format="3">
  <name>processing_decision</name>
  <version>0.1.0</version>
  <description>Processing Decision Node for CyberLimb</description>

  <maintainer email="jakek927@gmail.com">Jake Kemple</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>InterbotixPerceptionModules</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
