<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_output</name>
  <version>0.0.1</version>
  <description>Action output package for cyberlimb</description>
  <maintainer email="jakek927@uw.edu">Jake Kemple</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>interbotix_xs_modules</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
